--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.collectibleholdings.iterable_flutter">
+    android:usesCleartextTraffic="true"
 </manifest>
